--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -50,6 +50,7 @@
       caret-color: $color-primary-light;
       font-size: 1rem;
       font-weight: $font-weight-heavy;
+      background: transparent;
     }
   }
 }
