--- a/public/sass/layout/_offers.scss
+++ b/public/sass/layout/_offers.scss
@@ -39,5 +39,8 @@
     .btn {
       background-color: grey;
       color: $color-white;
+      &:active{
+display: none;
+      }
     }
   }
